// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> passes styles down to children columns should match snapshot with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) {
  padding-top: calc(2em / 2);
  padding-bottom: calc(2em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-row {
  padding-left: calc(2em / 2);
  padding-right: calc(2em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-col {
  padding: calc(2em / 2);
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c1 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<styled.div
  spacing={2}
>
  <div
    className="brckwrx-grid c0"
    spacing={2}
  >
    <Col>
      <div
        className="brckwrx-col c1"
      >
        Hello
      </div>
    </Col>
  </div>
</styled.div>
`;

exports[`<Grid /> with added props should match snapshot with props 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: space-around;
  -ms-flex-line-pack: space-around;
  align-content: space-around;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) {
  padding-top: calc(1em / 2);
  padding-bottom: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-row {
  padding-left: calc(1em / 2);
  padding-right: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-col {
  padding: calc(1em / 2);
}

<div
  className="brckwrx-grid c0"
  spacing={true}
/>
`;

exports[`<Grid /> with default props/settings should match snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) {
  padding-top: calc(1em / 2);
  padding-bottom: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-row {
  padding-left: calc(1em / 2);
  padding-right: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-col {
  padding: calc(1em / 2);
}

<div
  className="brckwrx-grid c0"
/>
`;
